# cups

./: .gitattributes  .gitignore  CHANGES.md  Makedefs.in  Makefile  NOTICE  README.md  config.h.in  configure  configure.ac  cups-config.in
config-scripts/: cups-common.m4  cups-manpages.m4  cups-sharedlibs.m4  cups-tls.m4
cups/: adminutil.c  auth.c  cups.h  http-private.h  service-document.c  service-job.c  service-printer.c  service-private.h  service-subscription.c  service.h  string-private.h
examples/: Makefile
man/: Makefile
tools/: Makefile
